--- a/package.json
+++ b/package.json
@@ -16,25 +16,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "^4.5.3",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "1.2.3",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
-    "expo-camera": "~15.0.14",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jsqr": "^1.4.0",
     "qrcode.react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
@@ -47,6 +50,7 @@
     "@types/jest": "^29.5.12",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
